--- a/task_manager/src/layouts/base/style.css
+++ b/task_manager/src/layouts/base/style.css
@@ -4,21 +4,20 @@
     flex-direction: row;
     box-sizing: border-box;
     width: 100%;
-    max-width: 960px;
+    max-width: 1500px;
     padding: 0 10px;
-    margin: 0 auto;
+    margin: 1% 5.5%;
 }
 
 .main__side-bar {
     box-sizing: border-box;
-    padding: 15px 0 0;
-    max-width: 200px;
+    padding: 15px 5px 0;
+    max-width: 170px;
     justify-self: stretch;
 }
 
 .main__content {
     flex-grow: 1;
     box-sizing: border-box;
-    padding: 15px 10px 0;
-    background-color: #fff;
+    padding: 15px 0 0;
 }
