--- a/task_manager/src/components/article/style.css
+++ b/task_manager/src/components/article/style.css
@@ -1,6 +1,6 @@
 .article {
     font-family: Helvetica, sans-serif;
-    margin-bottom: 40px;
+    margin-bottom: 5px;
 }
 
 .article:last-child {
@@ -9,5 +9,22 @@
 
 .article__title {
     color: #244f92;
-    margin: 0;
+}
+
+.article__description {
+    color: #303030;
+    font-weight: 300;
+}
+
+.article__font_style {
+    padding: auto;
+    font-family: "Roboto font", Helvetica, sans-serif;
+    font-size: 20px;
+    margin-left: 40px;
+}
+
+.article__border_style {
+    border-radius: 4px;
+    border:1px solid #e5e5e5;
+    box-shadow: -1px 2px 1px #c1c1c1;
 }
