--- a/task_manager/src/layouts/base/components/header/style.css
+++ b/task_manager/src/layouts/base/components/header/style.css
@@ -1,17 +1,17 @@
 .header {
-    background-color: #446eaf;
+    background-color: #96efc0;
     font-family: Helvetica, sans-serif;
 }
 
 .header__content {
     box-sizing: border-box;
     max-width: 960px;
-    padding: 10px;
-    margin: 0 auto;
+    padding: 20px;
+    margin: auto 0;
 }
+
 .header__logo {
-    color: #fff;
-    font-size: 24px;
-    font-weight: 700;
-    text-decoration: none;
+    margin-left: 70px;
+    width: auto;
+    height: 32px;
 }
