--- a/task_manager/src/components/article/style.css
+++ b/task_manager/src/components/article/style.css
@@ -1,30 +1,82 @@
 .article {
-    font-family: Helvetica, sans-serif;
-    margin-bottom: 5px;
+    width: 95%;
+    margin-bottom: 10px;
+    position: relative;
 }
 
 .article:last-child {
     margin-bottom: 0;
 }
 
-.article__title {
-    color: #244f92;
-}
-
-.article__description {
+.article__text {
+    display: inline;
+    position: absolute;
+    margin: 1% 0;
     color: #303030;
     font-weight: 300;
-}
-
-.article__font_style {
-    padding: auto;
     font-family: "Roboto font", Helvetica, sans-serif;
     font-size: 20px;
-    margin-left: 40px;
 }
 
 .article__border_style {
     border-radius: 4px;
     border:1px solid #e5e5e5;
     box-shadow: -1px 2px 1px #c1c1c1;
+}
+
+
+.article__button {
+    border: none;
+    width: 40px;
+    height: 40px;
+    display: inline;
+}
+
+.article__done_button {
+    background: url("./images/o.svg") no-repeat 50% 50%;
+    background-size: 17px;
+}
+
+.article__done_button:hover {
+    background: url("./images/o_hover.svg") no-repeat 50% 50%;
+    background-size: 17px;
+}
+
+.article__finished_task_button {
+    background: url("./images/done_task_gray.svg") no-repeat 50% 50%;
+    background-size: 17px;
+}
+
+.article__edit_button {
+    display: none;
+    position: absolute;
+    right: 40px;
+    background: url("./images/pencil.svg") no-repeat 50% 50%;
+    background-size: 17px;
+}
+
+.article__edit_button:hover {
+    background: url("./images/pencil_blue.svg") no-repeat 50% 50%;
+    background-size: 17px;
+}
+
+.article__delete_button {
+    display: none;
+    position: absolute;
+    right: 0;
+    background: url("./images/delete.svg") no-repeat 50% 50%;
+    background-size: 17px;
+}
+
+.article__delete_button:hover {
+    background: url("./images/delete_red.svg") no-repeat 50% 50%;
+    background-size: 17px;
+}
+
+.article:hover .article__edit_button {
+    display: inline;
+}
+
+.article:hover .article__delete_button {
+    display: inline;
 }
