--- a/task_manager/src/layouts/base/components/header/style.css
+++ b/task_manager/src/layouts/base/components/header/style.css
@@ -1,6 +1,8 @@
 .header {
-    background-color: #96efc0;
+    box-shadow: 0 0 4px rgba(0,0,0,0.12);
+    background-image: linear-gradient(154deg, #96efc0 0%, #73baff 100%);
     font-family: Helvetica, sans-serif;
+    display: flex;
 }
 
 .header__content {
@@ -8,6 +10,14 @@
     max-width: 960px;
     padding: 20px;
     margin: auto 0;
+}
+
+.header__user_name {
+    position: absolute;
+    right: 150px;
+    font-size: 30px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
 }
 
 .header__logo {
